<resources>
    <string name="app_name">LifeSync</string>
    <string name="remote_access_mode">Remote Access Mode</string>
    <string name="choose_mode">Choose Mode</string>
    <string name="welcome_to_lifesync">Welcome to LifeSync</string>
    <string name="self_mode">Self Mode</string>
    <string name="self_mode1">Self Mode</string>
    <string name="register_here">Register Here</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_contact_no">Enter your Contact No.</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login_now">Login Now</string>
    <string name="login">Login</string>
    <string name="enter_your_email1">Enter your Email</string>
    <string name="enter_your_password1">Enter your Password</string>
    <string name="welcome_to_lifesync1">Welcome to LifeSync</string>
    <string name="welcome_to_self_mode">Welcome to Self Mode</string>
    <string name="welcome_to_remote_access_mode">Welcome to Remote Access Mode</string>
    <string name="generate_a_qr_code">Generate a QR Code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="focus_here">Focus Here</string>
    <string name="choose_a_option_below">Choose a option Below</string>
    <string name="please_focus_on_qr_code">Please focus on QR Code</string>
    <string name="qr_code_generator">QR Code Generator</string>
    <string name="todo">TODO</string>
    <string name="qr">Qr</string>
    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="last_time_used">"Last time used: "</string>
    <string name="time_span">"Time span: "</string>
    <string name="display_order_text">Sort by:</string>
    <string name="app_name_label">App</string>
    <string name="last_time_used_label">Last time used</string>
    <string name="usage_time_label">Usage time</string>
    <string name="button">Button</string>
    <string name="scan">Scan</string>
    <string name="lock_apps">Lock Apps</string>
    <string name="get_app_usage_stats">Get App usage Stats</string>
    <string name="unlock_apps">Unlock Apps</string>
    <string name="send_sos">Send SOS</string>
    <string name="facebook_app_id">1827892553981610</string>
    <string name="fb_login_protocol_scheme">fb1827892553981610</string>
    <string name="signout">Signout</string>
    <string name="already_registered_login_now">Already Registered Login Now</string>
    <string name="not_yet_registered_register_now">Not yet Registered? Register Now</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_a_account">already have a account? Sign In here</string>
    <string name="sign_in">SIGN IN</string>
    <string name="log_in">LOG IN</string>
    <string name="not_have_any_account_sign_up_here">Not have any account? sign up here</string>
    <string name="log_out">LOG OUT</string>
    <string name="name">NAME</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">CONFIRM\nPASSWORD</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="mobile_no">MOBILE NO</string>
    <string name="enter_10_digit_mobile_number">Enter 10 digit mobile number</string>
    <string name="registration_successfull">Registration successfull</string>
    <string name="registration_failed">Registration failed try again</string>
    <string name="textview2">Note: For Scanning a QR please give access to Camera Persmission</string>
    <string name="textview3">Note: Please do not Scan other QR with this because it may lead to AppCrash</string>
    <string name="confused">Confused?</string>
    <string name="textview5">Just get to Know it in About Us Section</string>
    <string name="textview4">Which mode to use, and how it works</string>
    <string name="textview6">*Invalid Credentials</string>
    <string name="reset_password">Reset Password</string>
    <string name="rstpsw">Button</string>
    <string name="invalid_email">*Invalid Email</string>
    <string name="edittext10">Enter your Email</string>
    <string name="textview10">TextView</string>
    <string name="hint_include_a_z_a_0_9">*Hint: Include A-z,a-z,0-9,</string>
    <string name="special_characters">Special characters(@,#,*,%)</string>
    <string name="submit">Submit</string>
    <string name="textview13">TextView</string>
    <string name="todo1">TODO</string>
    <string name="ok">OK</string>
    <string name="_1234">1234</string>
    <string name="_12341">1234</string>
    <string name="todo2">TODO</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="child">Child</string>
    <string name="parent">Parent</string>
    <string name="are_you_a">Are you a:</string>
    <string name="settings">settings</string>
    <string name="share">share</string>
    <string name="enter_your_mobile_number">enter your mobile number</string>
    <string name="message">Message</string>
    <string name="send">SEND</string>
    <string name="allow_permission_to_use_sysem_app_stats">Allow Permission to use sysem app stats</string>
    <string name="cancel">CANCEL</string>
    <string name="lock">LOCK</string>

</resources>
