<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingStart="60dip"
        android:paddingTop="10dip"
        android:paddingEnd="60dip">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dip"
            android:text="@string/register_here"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:background="@drawable/basic_button"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingTop="13dp"
            android:paddingEnd="10dp"
            android:paddingBottom="12dp"
            android:textColor="@color/coloroverlay"
            android:textColorHint="@color/coloroverlay"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:background="@drawable/basic_button"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingTop="13dp"
            android:paddingEnd="10dp"
            android:paddingBottom="12dp"
            android:textColor="@color/coloroverlay"
            android:textColorHint="@color/coloroverlay"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:background="@drawable/basic_button"
            android:ems="10"
            android:maxLength="10"
            android:hint="@string/enter_your_mobile_number"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingStart="10dp"
            android:paddingTop="13dp"
            android:paddingEnd="10dp"
            android:paddingBottom="12dp"
            android:textColor="@color/coloroverlay"
            android:textColorHint="@color/coloroverlay"
            tools:targetApi="o" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:hint="@string/enter_your_password"
            android:textColorHint="@color/coloroverlay"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/basic_button"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingTop="13dp"
                android:paddingEnd="10dp"
                android:paddingBottom="12dp"
                android:textColor="@color/coloroverlay"
                tools:targetApi="o" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:text="@string/are_you_a"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:background="@drawable/basic_button">

            <RadioButton
                android:id="@+id/Parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parent"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/Child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/child"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RadioGroup>

        <EditText
            android:id="@+id/editText20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dip"
            android:ems="10"
            android:hint=""
            android:importantForAutofill="no"
            android:text="@string/hint_include_a_z_a_0_9"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="16sp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editText15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dip"
            android:ems="10"
            android:hint=""
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/special_characters"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="16sp"
            tools:targetApi="o" />

        <Button
            android:id="@+id/rbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:background="@drawable/rounded_button"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text="@string/register"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/logintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll"
        android:layout_centerHorizontal="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/already_registered_login_now"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textSize="16sp" />

    <com.facebook.login.widget.DeviceLoginButton
        android:id="@+id/fbbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logintext"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dip" />


</RelativeLayout>