<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android"
    tools:context=".RemoteAccessMode">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/choose_a_option_below"
        android:textColor="@color/colorAccent"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/gqrbtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/generate_a_qr_code"
        android:textColor="@color/colorAccent"
        android:background="@drawable/rounded_button"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/sqrbtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/scan_qr_code" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="500dp"
        android:layout_height="20dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/textview2"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="500dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="672dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="10dp"
        android:text="@string/textview3"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_centerInParent="true"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>