<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/android"
    android:padding="20dp"
    tools:context=".HomeActivity">

          <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:text="@string/welcome_to_lifesync"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/choose_mode"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/sm"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/self_mode"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Button
                android:id="@+id/rm"
                android:layout_width="210dip"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/remote_access_mode"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Button
                android:id="@+id/signout"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:background="@drawable/rounded_button"
                android:text="@string/signout"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </LinearLayout>

</RelativeLayout>