<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android1"
    tools:context=".LoginActivity"
    android:padding="40dp">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/ete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/basic_button"
            android:ems="10"
            android:hint="@string/enter_your_email1"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingTop="13dp"
            android:paddingEnd="10dp"
            android:paddingBottom="12dp"
            android:textColor="@color/coloroverlay"
            android:textColorHint="@color/coloroverlay"
            tools:targetApi="o" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:textColorHint="@color/coloroverlay"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/basic_button"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingTop="13dp"
                android:paddingEnd="10dp"
                android:paddingBottom="12dp"
                android:textColor="@color/coloroverlay"
                tools:targetApi="o" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll1"
        android:layout_centerHorizontal="true"
        android:text="@string/not_yet_registered_register_now"
        android:layout_marginTop="5dip"
        android:textColor="@android:color/holo_orange_dark" />


    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dip"
        android:layout_below="@id/ll1"
        android:orientation="vertical"
        android:paddingLeft="70dip"
        android:paddingRight="70dip">

        <Button
            android:id="@+id/lgbtn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_margin="10dip"
            android:text="@string/login" />

        <Button
            android:id="@+id/resetbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/reset_password"
            android:layout_margin="10dip"/>
    </LinearLayout>
</RelativeLayout>