<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android"
    tools:context=".ResetPass_Activity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:text="@string/reset_password"
        android:textColor="@color/colorAccent"
        android:textSize="35sp"
        tools:text="Reset Password" />

    <EditText
        android:id="@+id/verifyem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="13dp"
        android:paddingBottom="12dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/basic_button"
        android:hint="@string/edittext10"
        android:textColorHint="@color/coloroverlay"
        android:importantForAutofill="no"
        android:inputType=""
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/submit"
        android:textColor="@color/colorAccent"

        tools:text="Submit" />

</RelativeLayout>